--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <H1>Is the file imported?</H1>
-<marquee behavior="scroll" direction="left">No.</marquee>
+<marquee behavior="scroll" direction="left" style="size:200px;">No.</marquee>
 </body>
 </html>
